--- a/style.css
+++ b/style.css
@@ -1,1 +1,76 @@
 @import url('http://fonts.cdnfonts.com/css/segoe-ui-4');
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    height: 100vh;
+    overflow: hidden;
+    background-image: url('https://images.unsplash.com/photo-1595088402198-24d44e48d57c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1554&q=80');
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #fff;
+    font-family: 'Segoe UI', sans-serif;
+}
+
+.glass-view {
+    margin: 50px;
+    padding: 30px;
+    background-color: #ffffff30;
+    backdrop-filter: blur(10px);
+    border-radius: 10px;
+    height: 90%;
+}
+
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.nav a {
+    text-decoration: none;
+    color: #fff;
+    margin: 0 10px;   
+}
+
+.nav a:hover {
+    text-decoration: underline;
+}
+
+.content-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: inherit;
+    padding: 0 20px;
+}
+
+.content h2 {
+    font-size: 2rem;
+}
+
+.content p {
+    max-width: 500px;
+}
+
+.content button {
+    padding: 10px 30px;
+    font-size: 1rem;
+    border: 0;
+    border-radius: 10px;
+    background-color: aqua;
+    color: white;
+    margin-top: 30px;
+}
+
+.img-container {
+    max-width: 500px;
+}
+
+.img-container img {
+    width: 100%;
+}
